syntax = "proto3";

//option go_package = "github.com/hangingman/flutter-golang-integral/echo/proto";

package echo;

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}

service EchoService {
  rpc Echo (EchoRequest)
    returns (EchoResponse);
}
